--- a/html/index.html
+++ b/html/index.html
@@ -10,5 +10,7 @@
     This is another update!!
     This is another another update!!
     This will be production!
+
+    <img src="./images/IMG_5329.jpg" style="width: 200px; height: auto;" alt="Profile">
 </body>
 </html>
